io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/fromcontractonnonstorage/C.java
package io.hotmoka.examples.errors.fromcontractonnonstorage;

import io.takamaka.code.lang.FromContract;

public class C {
	public @FromContract void m() {}
}